# vzt-flow

./: .gitignore  AGENT-INSTALL.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml
.claude/agents/: flow-feature-builder.md  flow-releaser.md  flow-verifier.md
.claude/skills/verify-dictation/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  installer.yml  release.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  coordinator.rs  daemon.rs  lib.rs  main.rs  meeting_ctl.rs  overlay.rs  settings.rs  state.rs  tray.rs
crates/flow-cli/: Cargo.toml
crates/flow-cli/src/: main.rs
crates/flow-cli/src/commands/: cancel.rs  clean_test.rs  code_test.rs  daemon_client.rs  doctor.rs  history.rs  listen.rs  meeting.rs  mod.rs  models.rs  paste_test.rs  rolling_test.rs  status.rs  toggle.rs  transcribe.rs
crates/flow-core/: Cargo.toml
crates/flow-core/examples/: dict_check.rs
crates/flow-core/src/: audio.rs  chunking.rs  cleanup.rs  cleanup_manager.rs  codemode.rs  config.rs  dictionary.rs  engine.rs  history.rs  hotkey.rs  insert.rs  ipc.rs  lib.rs  model_manager.rs  models.rs  permissions.rs  profiles.rs  rolling.rs  snippets.rs
crates/flow-core/src/meeting/: dedup.rs  detect.rs  mod.rs  syscapture.rs  transcriber.rs
docs/: MEETINGS.md  PRD.md  USAGE-Linux.md  USAGE-Windows.md  USAGE-macOS.md
mcp/: package-lock.json  package.json  tsconfig.json
mcp/src/: daemon.ts  flow-cli.ts  history.ts  index.ts  meeting.ts
scripts/: install.ps1  install.sh  setup-signing.sh
