[package]
name = "flow-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
transcribe-rs = { version = "0.3", features = ["onnx", "ort-coreml"] }
cpal = "0.15"
hound = "3.5"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
indicatif = "0.17"
sha2 = "0.10"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
arboard = "3"
enigo = "0.6"
core-graphics = "0.25"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-application-services = "0.3"
core-foundation = "0.10"
