[package]
name = "flow-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Base ONNX runtime feature only; the CoreML execution provider
# (`ort-coreml`) is macOS-only and added below via the target-specific
# section, which Cargo unions into this same feature set at resolve time.
transcribe-rs = { version = "0.3", features = ["onnx"] }
cpal = "0.15"
hound = "3.5"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
indicatif = "0.17"
sha2 = "0.10"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
arboard = "3"
# Cross-platform (macOS/Windows/Linux) input simulation, used for the
# Cmd+V/Ctrl+V paste in `insert.rs`.
enigo = "0.6"
strsim = "0.11"
encoding_rs = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-application-services = "0.3"
core-foundation = "0.10"
# `hotkey.rs`'s CGEventTap monitor is macOS-only (see its module docs).
core-graphics = "0.25"
llama-cpp-2 = { version = "0.1", features = ["metal"] }
# CoreML execution provider for transcribe-rs's ONNX backend (see the
# comment on the base `transcribe-rs` dependency above).
transcribe-rs = { version = "0.3", features = ["ort-coreml"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
# CPU-only ONNX inference (Parakeet) and llama.cpp (cleanup model) on
# Windows/Linux — no Metal, no CoreML.
llama-cpp-2 = "0.1"
