[package]
name = "flow-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Base ONNX runtime feature only; the CoreML execution provider
# (`ort-coreml`) is macOS-only and added below via the target-specific
# section, which Cargo unions into this same feature set at resolve time.
transcribe-rs = { version = "0.3", features = ["onnx"] }
cpal = "0.18"
hound = "3.5"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
indicatif = "0.17"
sha2 = "0.10"
# Pure-Rust tar + gzip extraction for the Parakeet model archive, replacing a
# shell-out to the `tar` binary (not guaranteed on PATH, notably on Windows).
# `flate2` is already in the tree transitively (via arboard→image); pinned here
# as a direct dep. Both default to pure-Rust backends — no C toolchain needed.
tar = "0.4"
flate2 = "1"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
arboard = "3"
# Cross-platform (macOS/Windows/Linux) input simulation, used for the
# Cmd+V/Ctrl+V paste in `insert.rs`.
enigo = "0.6"
strsim = "0.11"
encoding_rs = "0.8"
# Local-time formatting for meeting transcript filenames/headers. Already in
# the dependency tree transitively; pinned here as a direct dep for meeting mode.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-application-services = "0.3"
core-foundation = "0.10"
# `hotkey.rs`'s CGEventTap monitor is macOS-only (see its module docs).
core-graphics = "0.25"
# Meeting mode: system/app audio capture via Apple's ScreenCaptureKit
# (audio-only SCStream). macOS 13+; safe Rust bindings (v8, current 2026-06).
screencapturekit = "8"

# Apple Silicon: llama.cpp's Metal backend is what makes cleanup fast
# (~0.3s warm generation on M-series). It's arm64-oriented (Apple's GPU
# family on Intel Macs is a different, much smaller install base and
# llama.cpp's Metal kernels aren't tuned/tested for it) and CoreML's ANE
# acceleration for transcribe-rs's ONNX backend is Apple-Silicon-only too.
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
llama-cpp-2 = { version = "0.1", features = ["metal"] }
# CoreML execution provider for transcribe-rs's ONNX backend (see the
# comment on the base `transcribe-rs` dependency above).
transcribe-rs = { version = "0.3", features = ["ort-coreml"] }

# Intel Mac: no Metal, no CoreML — both ASR (ONNX, plain CPU EP) and
# cleanup (llama.cpp, CPU-only build) run on the CPU. Slower than Apple
# Silicon but functionally the same pipeline; see the README hardware
# compat matrix for measured/estimated throughput.
[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
llama-cpp-2 = "0.1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
# CPU-only ONNX inference (Parakeet) and llama.cpp (cleanup model) on
# Windows/Linux — no Metal, no CoreML.
llama-cpp-2 = "0.1"

[target.'cfg(windows)'.dependencies]
# Windows daemon control-pipe transport (`ipc.rs`'s `windows` module) — a
# `std::io::{Read, Write}`-wrapped native named pipe, mirroring the Unix
# socket transport. Sync-only usage (default features; `async`/`tokio`
# features are opt-in and unused here).
interprocess = "2"
