[package]
name = "vzt-flow-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "vzt_flow_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
flow-core = { path = "../../../crates/flow-core" }
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow"] }
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows hold-to-talk hotkey (see coordinator.rs's `spawn_hotkey_monitor`);
# macOS uses flow-core's CGEventTap instead and never needs this plugin.
tauri-plugin-global-shortcut = "2"
